maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:7: error: not found: value x
  for (i <- 0 to x-1) {
                 ^JediEscaper:8: error: not found: value y
    for (j <- 0 to y-1) {
                   ^